# step-supports

./: .gitignore  .gitmodules  LICENSE.md  README.md  TERMS.md  package-lock.json  package.json  pyproject.toml  requirements.txt  step_supports.py  stl_supports.py
.claude/: CLAUDE.md  launch-strategy.md  launch.json  settings.json  site-improvements.md
.claude/memory/: MEMORY.md  project_history.md
server/: package.json  schema.sql  wrangler.toml
server/migrations/: 0001_add_auth.sql
server/src/: api.ts  index.ts
server/web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
server/web/src/: App.tsx
server/web/src/components/: CopyToken.tsx  FileDropZone.tsx  Footer.tsx  Header.tsx  ProgressSteps.tsx
server/web/src/lib/: AuthContext.tsx  license.ts  mesh-utils.ts  occt-import-js.d.ts  step.ts  stl.ts  threemf.ts
server/web/src/pages/: Docs.tsx  Landing.tsx  Recover.tsx  Success.tsx  Try.tsx
server/web/src/styles/: index.css
server/web/src/workers/: supports.worker.ts
src/negative_support/: __init__.py  cli.py  license.py  progress.py
tests/: baseline.json  baseline.py  baseline_generator.py  baseline_mesh.json  baseline_wasm.mjs  baseline_wasm_all.mjs  generate_baselines.py  run_all.py  test_npm.mjs  test_python.py
tests/baselines/: follower_mesh.json  follower_step.json  handle_mesh.json  handle_step.json  test_model_mesh.json  test_model_step.json
