[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "negative-support"
version = "0.2.0"
description = "Negative-space 3D print support generator for STEP and mesh files"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "trimesh[easy]>=4.0",
    "numpy",
    "manifold3d",
    "lib3mf",
]

[project.optional-dependencies]
step = ["build123d>=0.8"]

[project.scripts]
negative-support = "negative_support.cli:main"

[tool.hatch.build.targets.sdist]
exclude = [
    "packages/",
    "node_modules/",
    "models/",
    ".claude/",
    "server/",
    ".venv/",
    "dist/",
    "*.egg-info/",
    ".git/",
    "__pycache__/",
]

[tool.hatch.build.targets.wheel]
packages = ["src/negative_support"]
